# estudo-base-rust

abstractions/src/: lib.rs  main.rs
advanced_macros/src/: lib.rs
advanced_traits/src/: main.rs
advanced_types/src/: main.rs
advanced_unsafe/src/: main.rs
blog-oo/: Cargo.toml
blog-oo/src/: lib.rs  main.rs
cargo-v/: Cargo.toml  README.md  teste_write.toml
cargo-v/src/: lib.rs  main.rs
closures/src/: main.rs
collections/src/: main.rs
cr8s/: Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml
cr8s/migrations/2023-07-28-021333_create_rustaceans/: down.sql
cr8s/migrations/2023-07-28-021345_create_crates/: up.sql
cr8s/src/: main.rs  models.rs  repositories.rs
cr8s/src/rocket_routes/: crates.rs  mod.rs  rustaceans.rs
cr8s/tests/: rustaceans.rs
curso_espanhol/: Brewfile
curso_espanhol/assincrono/: Cargo.toml
curso_espanhol/chat_async/: Cargo.toml
curso_espanhol/macros_exemplo/: Cargo.toml
curso_espanhol/minigrep/: teste.txt
curso_espanhol/servidor_actix/: .env  Cargo.toml
curso_espanhol/servidor_web/: 404.html  Cargo.toml  index.html
curso_espanhol/sqlite_app/: Cargo.toml  users.sqlite3
curso_espanhol/web_assembly_precos/: Cargo.toml
curso_espanhol/web_assembly_precos/src/: lib.rs
curso_espanhol/web_assembly_precos/webapp/: index.html
curso_espanhol/yew_youtube_search/: Cargo.toml
curso_espanhol/yew_youtube_search/src/: main.rs  youtube.rs
enums/src/: main.rs
errors/: hello.txt
errors/src/: main.rs
fatia/: Cargo.toml
fatia/src/: main.rs
first/: Cargo.toml
first-wasm/: Cargo.toml  LICENSE_MIT  index.html  index.js
first-wasm/src/: lib.rs
first/src/: main.rs
graphql-server/: Cargo.toml
graphql-server/src/: main.rs
graphql-server/src/schema/: mod.rs
graphql-server/src/server/: routes.rs
hello/: 404.html  hello.html
hello/src/: lib.rs  main.rs
iflet/src/: main.rs
iterators/src/: lib.rs  main.rs
minigrep/: Cargo.toml  file.txt
minigrep/src/: lib.rs  main.rs
oo/src/: lib.rs  main.rs
rc-t/: Cargo.toml
tarefas_rust/: Cargo.toml  arquivo.txt
validations/: Cargo.toml
weak-references/: Cargo.toml
(+38 files in other folders)
