[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Logging
log = "0.4.17"
pretty_env_logger = "0.4.0"

# Async
tokio = { version = "1.24.1", features = ["full"] }

#Serialization
serde_json = "1.0.91"


# Web
warp = "0.3.3"
async-graphql = "5.0.5"
async-graphql-warp = "5.0.5"

