[package]
name = "yew_youtube_search"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-net = "0.3.1"
serde = { version = "1.0.177", features = ["derive"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = { version = "0.3.64", features = ["Event", "InputEvent"] }
yew = { version = "0.20.0", features = ["csr"] }
